--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #app {
-  width: 826px;
-  height: 936px;
+  width: 526px;
+  height: 636px;
+  /* border: 2px solid red; */
 }
 
 .box {
@@ -8,3 +9,42 @@
   height: 100%;
 }
 
+
+#app {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows:repeat(5,1fr) ;
+  border: 2px solid rebeccapurple;
+}
+
+#fish-flag {
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+  
+}
+
+#vase-short {
+  grid-column: 4 / 5;
+  grid-row: 1 / 3;
+}
+
+#map {
+  grid-column: 1 / 4;
+  grid-row: 2 / 3;
+  
+}
+
+#vase-tall {
+  grid-column: 1 / 2;
+  grid-row: 3 / 6;
+}
+
+#bamboo {
+  grid-column: 2 / 5;
+  grid-row: 3 / 5;
+}
+
+#quadropus {
+  grid-column: 2 / 5;
+  grid-row: 5 / 6;
+}
